plugin/testData/diagnostics/errors/transparent-no-inline.kt
import me.mrfang.transparent.Transparent

<!TRANSPARENT_WITHOUT_INLINE!>@Transparent
class Name(private val s: String)<!>
